--- a/frontend/src/App/styles/components/buttons/_buttons.scss
+++ b/frontend/src/App/styles/components/buttons/_buttons.scss
@@ -88,7 +88,7 @@
 
     &--to-reviews {
       @extend %btn;
-      margin: 0.25rem;
+      margin: 4rem;
       color: $white;
       width: 22rem;
       height: min-content;
