--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -370,7 +370,7 @@
       border-bottom: 1px solid $grey-6;
       color: $black;
       z-index: 100;
-      overflow: hidden;
+      // overflow-x: hidden;
 
       @media ( max-width: 510px ) {
         display: grid;
@@ -676,11 +676,11 @@
       grid-row: 1 / span 3;
       grid-column: 2 / span 1;
       width: max-content;
-      transform: translate(-3.5rem, 6.5rem);
+      transform: translate(-2.65rem, 6.5rem);
       z-index: 100;
 
       @media (max-height: 900px) {
-        transform: translate(-2.5rem, 9rem);
+        transform: translate(-3.5rem, 9rem);
       }
 
       @media (max-width: 950px) {
